@@ -833,7 +833,7 @@ PRIMARY KEY  (id)
 				if ( $shortcode_found ) {
 					$this->enqueue_form_scripts();
 					$nonce = wp_create_nonce( 'wp_rest' );
-					wp_enqueue_script( 'sack', "/wp-includes/js/tw-sack$this->min.js", array(), '1.6.1' );
+					wp_enqueue_script( 'sack', "/wp-includes/js/tw-sack{$this->min()}.js", array(), '1.6.1' );
 					wp_enqueue_script( 'gravityflow_entry_detail', $this->get_base_url() . "/js/entry-detail{$this->min()}.js", array( 'jquery', 'sack' ), $this->_version );
 					wp_enqueue_script( 'gravityflow_status_list', $this->get_base_url() . "/js/status-list{$this->min()}.js",  array( 'jquery', 'jquery-ui-core', 'jquery-ui-datepicker', 'gform_datepicker_init' ), $this->_version );
 					wp_enqueue_script( 'gform_field_filter', GFCommon::get_base_url() . "/js/gf_field_filter{$this->min()}.js",  array( 'jquery', 'gform_datepicker_init' ), $this->_version );
@@ -3142,7 +3142,7 @@ PRIMARY KEY  (id)
 			<script>
 				(function($) {
 					$( '#step_highlight' ).click(function(){
-						$('.gravityflow-step-highlight-settings').slideToggle();
+						$('.gravityflow-step-highlight-settings').toggle();
 					});
 					$(document).ready(function () {
 						$("#step_highlight_color").wpColorPicker();
@@ -3430,10 +3430,14 @@ PRIMARY KEY  (id)
 			$field = $this->prepare_settings_step_highlight( $field );
 
 			$checkbox_field = $field['settings']['step_highlight'];
-			$this->validate_checkbox_settings( $checkbox_field, $settings );
+			$renderer  = $this->get_settings_renderer();
+			$cb_field     = new \Gravity_Forms\Gravity_Forms\Settings\Fields\Checkbox( $checkbox_field, $renderer );
+			$cb_field->do_validation( $settings[ 'step_highlight'] );
 
 			$color_field = $field['settings']['step_highlight_color'];
-			$this->validate_text_settings( $color_field, $settings );
+			$text_field     = new \Gravity_Forms\Gravity_Forms\Settings\Fields\Text( $color_field, $renderer );
+			$text_field->do_validation( $settings[ 'step_highlight_color'] );
+
 			$this->validate_step_highlight_color_settings( $color_field, $settings );
 
 		}
